Zapis / odczyt danych aplikacji

--- a/src/main/resources/pl/kognitywistyka/io/hello-view.fxml
+++ b/src/main/resources/pl/kognitywistyka/io/hello-view.fxml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?><?import javafx.scene.control.Label?><?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-    fx:controller="pl.kognitywistyka.io.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
 
-    <Label fx:id="welcomeText" />
-    <Button text="Hello!" onAction="#onHelloButtonClick" />
-</VBox>
+<AnchorPane fx:controller="pl.kognitywistyka.io.HelloController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <TextField fx:id="firstName" layoutX="226.0" layoutY="66.0" />
+      <TextField fx:id="lastName" layoutX="226.0" layoutY="145.0" />
+      <DatePicker fx:id="birthDate" layoutX="214.0" layoutY="227.0" />
+      <Button fx:id="save" layoutX="173.0" layoutY="305.0" mnemonicParsing="false" onAction="#doSave" text="Save" />
+      <Button fx:id="load" layoutX="388.0" layoutY="305.0" mnemonicParsing="false" onAction="#doLoad" text="Load" />
+      <Label layoutX="273.0" layoutY="37.0" text="First name" />
+      <Label layoutX="274.0" layoutY="116.0" text="Last name" />
+      <Label layoutX="275.0" layoutY="200.0" text="Birth date" />
+   </children>
+</AnchorPane>
